app/k8s/tasky-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: tasky-sa
      containers:
      - name: tasky
        image: 903685415680.dkr.ecr.us-east-1.amazonaws.com/tasky:wiz
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasky
spec:
  type: ClusterIP
  selector:
    app: tasky
  ports:
  - port: 80
    targetPort: 8080
